--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
   </form>
   <br>
 
-  <form action="/get_info" method="post">
-    <button type="submit">Get Info</button>
+  <form action="/get_info" method="post" enctype="application/x-www-form-urlencoded">
     <input type="text" name="topic" placeholder="Enter Wikipedia topic" required>
+    <button type="submit">Get info</button>
   </form>
   <br>
 
