add lambda function from aws

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,10 @@
   </form>
   <br>
 
+  <a href="/download">
+    <button>Download Wiki Summaries</button>
+  </a>
+
   <form action="/backup" method="post" enctype="multipart/form-data">
     <button type="submit">Backup</button>
     <input type="file" name="backup_file" required>
